syntax = "proto3";
package ops.v1;
option go_package = "gen/go/ops/v1;opsv1";

import "common/v1/types.proto";
import "common/v1/enums.proto";

// A remediation action proposed by agent-service
message Action {
  common.v1.UUID id = 1;
  common.v1.UUID incident_id = 2;
  int64 proposed_at_tick = 3;       // TickID when action was proposed
  common.v1.ActionType action_type = 4;
  string target_id = 5;             // Node or Service ID to act on
  common.v1.ActionStatus status = 6;
  string reason = 7;                // Why this action was chosen
  map<string, string> parameters = 8; // Action-specific params
  common.v1.SimulationTimestamp created_at = 9;
  common.v1.SimulationTimestamp executed_at = 10;
  string result_message = 11;
}

// Command to apply an action (sent to sim-engine)
message ApplyActionCommand {
  common.v1.UUID action_id = 1;
  int64 target_tick_id = 2;         // Must match current tick for validity
  common.v1.ActionType action_type = 3;
  string target_id = 4;
  map<string, string> parameters = 5;
}

// Result of action application
message ActionResult {
  common.v1.UUID action_id = 1;
  bool success = 2;
  string message = 3;
  int64 applied_at_tick = 4;
}
